--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
+    "multer": "^1.4.5-lts.2",
     "nodemailer": "^6.10.1",
-    "otp-generator": "^4.0.1"
+    "otp-generator": "^4.0.1",
+    "stream-chat": "^8.60.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.9"
